# rw_tileman

./: .gitignore  Cargo.toml  README.md  mass_out.txt  test_lingo_deser.txt  test_mass_deser.txt  test_single_deser.txt  tileman_config.json
src/: app.rs  lib.rs  lingo_de.rs  lingo_ser.rs  main.rs  tests.rs  utl.rs
testfiles/: init.txt  mass_deser.txt  tileman_errors.txt
testfiles/category-folder/: init.txt
