[package]
name = "rw_tileman"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cycle_map = "0.1.1"
egui = "0.21.0"
lazy_static = "1.4.0"
multiarray = "0.1.3"
regex = "1.8.1"
serde_json = "1.0.96"
log = "0.4.18"
flexi_logger = "0.25.5"
include_dir = "0.7.3"
msgbox = "0.7.0"
png = "0.17.9"
[dependencies.serde]
version = "1.0.163"
features = ["std", "alloc", "derive"]
[dependencies.eframe]
version = "0.21.3"
features = ["default", "dark-light"]
